clusters/cl01tl/manifests/lidarr/HTTPRoute-lidarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  labels:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: lidarr
    helm.sh/chart: lidarr-5.1.0
  namespace: lidarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "lidarr.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lidarr
          namespace: lidarr
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
